Update asset detection, additional info in the dialog

--- a/ui/dialogs/UpdateDialog.ui
+++ b/ui/dialogs/UpdateDialog.ui
@@ -29,8 +29,8 @@
          <property name="font">
           <font>
            <pointsize>12</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
+           <weight>50</weight>
+           <bold>false</bold>
           </font>
          </property>
          <property name="text">
